aws/fedora-coreos/kubernetes/controllers.tf
# Discrete DNS records for each controller's private IPv4 for etcd usage
resource "aws_route53_record" "etcds" {
  count = var.controller_count

  # DNS Zone where record should be created
  zone_id = var.dns_zone_id

  name = format("%s-etcd%d.%s.", var.cluster_name, count.index, var.dns_zone)
  type = "A"
  ttl  = 300

  # private IPv4 address for etcd
  records = [aws_instance.controllers.*.private_ip[count.index]]
}

data "aws_iam_instance_profile" "controller_profile" {
  count = var.instance_profile == null ? 0 : 1
  name  = var.instance_profile
}

# Controller instances
resource "aws_instance" "controllers" {
  count = var.controller_count

  tags = merge(
    var.additional_node_tags,
  { Name = "${var.cluster_name}-controller-${count.index}" })
  instance_type        = var.controller_type
  ami                  = var.controller_arch == "arm64" ? data.aws_ami.fedora-coreos-arm[0].image_id : data.aws_ami.fedora-coreos.image_id
  iam_instance_profile = var.instance_profile == null ? "" : data.aws_iam_instance_profile.controller_profile[0].name

  # storage
  root_block_device {
    volume_type = var.controller_disk_type
    volume_size = var.controller_disk_size
    iops        = var.controller_disk_iops
    encrypted   = true
    tags = {
      Name = "${var.cluster_name}-controller-${count.index}"
    }
  }

  # network
  associate_public_ip_address = (var.privacy_status == "public" ? true : false)
  subnet_id                   = element(data.aws_subnets.subnets.ids, count.index)
  vpc_security_group_ids      = concat([aws_security_group.controller.id], var.additional_controller_sg_ids)

  # boot
  user_data            = sensitive(base64encode(
                              jsonencode(
                                {
                                  "ignition": {
                                    "version": "3.4.0",
                                    "config": {
                                      "replace": {
                                          "compression": "gzip",
                                          "source": "data:;base64,${base64gzip(data.ct_config.controller-ignitions.*.rendered[count.index])}"
                                        }
                                    }
                                  }
                                }
                              )))

  # cost
  credit_specification {
    cpu_credits = var.controller_cpu_credits
  }

  lifecycle {
    ignore_changes = [
      ami,
      user_data,
    ]
  }
}

# Fedora CoreOS controllers
data "ct_config" "controller-ignitions" {
  count = var.controller_count
  content = templatefile("${path.module}/butane/controller.yaml", {
    # Cannot use cyclic dependencies on controllers or their DNS records
    etcd_name   = "etcd${count.index}"
    etcd_domain = "${var.cluster_name}-etcd${count.index}.${var.dns_zone}"
    # etcd0=https://cluster-etcd0.example.com,etcd1=https://cluster-etcd1.example.com,...
    etcd_initial_cluster = join(",", [
      for i in range(var.controller_count) : "etcd${i}=https://${var.cluster_name}-etcd${i}.${var.dns_zone}:2380"
    ])
    kubeconfig             = indent(10, module.bootstrap.kubeconfig-kubelet)
    ssh_authorized_key     = var.ssh_authorized_key
    cluster_dns_service_ip = cidrhost(var.service_cidr, 10)
  })
  strict   = true
  snippets = var.controller_snippets
}
